Following up with frontend counterpart.

--- a/HRSoft/src/main/resources/application.properties
+++ b/HRSoft/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform= org.hibernate.dialect.${HIBERNATE_DIALECT}
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
